Updated ANTLR and changed "." to AND instead of NAND